--- a/DBADash/packages.config
+++ b/DBADash/packages.config
@@ -17,6 +17,7 @@
   <package id="Microsoft.SqlServer.SqlManagementObjects" version="161.46367.54" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net471" />
   <package id="Polly" version="7.2.2" targetFramework="net471" />
+  <package id="Serilog" version="2.10.0" targetFramework="net471" />
   <package id="System.Data.Common" version="4.3.0" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="6.11.0" targetFramework="net471" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net471" />
