--- a/DBADashService/packages.config
+++ b/DBADashService/packages.config
@@ -4,10 +4,25 @@
   <package id="AWSSDK.S3" version="3.7.0.16" targetFramework="net472" />
   <package id="Common.Logging" version="3.4.1" targetFramework="net472" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Data.SqlClient" version="2.1.2" targetFramework="net472" />
   <package id="Microsoft.Data.SqlClient.SNI" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.0.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyModel" version="2.0.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Identity.Client" version="4.30.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.11.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Logging" version="6.11.0" targetFramework="net472" />
@@ -21,15 +36,26 @@
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="Polly" version="7.2.2" targetFramework="net472" />
   <package id="Quartz" version="3.3.2" targetFramework="net472" />
+  <package id="Serilog" version="2.10.0" targetFramework="net472" />
+  <package id="Serilog.Enrichers.Thread" version="3.1.0" targetFramework="net472" />
+  <package id="Serilog.Settings.Configuration" version="3.1.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net472" />
+  <package id="Serilog.Sinks.File" version="4.1.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Data.Common" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.1" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="6.11.0" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="5.0.1" targetFramework="net472" />
+  <package id="System.Text.Json" version="5.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="Topshelf" version="4.3.0" targetFramework="net472" />
