--- a/DBADashService/packages.config
+++ b/DBADashService/packages.config
@@ -38,9 +38,12 @@
   <package id="Quartz" version="3.3.2" targetFramework="net472" />
   <package id="Serilog" version="2.10.0" targetFramework="net472" />
   <package id="Serilog.Enrichers.Thread" version="3.1.0" targetFramework="net472" />
+  <package id="Serilog.Formatting.Compact" version="1.1.0" targetFramework="net472" />
   <package id="Serilog.Settings.Configuration" version="3.1.0" targetFramework="net472" />
   <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net472" />
   <package id="Serilog.Sinks.File" version="4.1.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.PeriodicBatching" version="2.3.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.Seq" version="5.0.1" targetFramework="net472" />
   <package id="SerilogTimings" version="2.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Data.Common" version="4.3.0" targetFramework="net472" />
