--- a/DBADash/DBADash.csproj
+++ b/DBADash/DBADash.csproj
@@ -237,6 +237,7 @@
     <Compile Include="DBImporter.cs" />
     <Compile Include="DBUpgrade\DBValidations.cs" />
     <Compile Include="Encrypt.cs" />
+    <Compile Include="ExtensionMethods.cs" />
     <Compile Include="PerformanceCounters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
