--- a/DBADashGUI/DBADashGUI.csproj
+++ b/DBADashGUI/DBADashGUI.csproj
@@ -56,6 +56,9 @@
     <Reference Include="DiffPlex.Wpf, Version=1.3.1.0, Culture=neutral, PublicKeyToken=1d35e91d1bd7bc0f, processorArchitecture=MSIL">
       <HintPath>..\packages\DiffPlex.Wpf.1.3.1\lib\net46\DiffPlex.Wpf.dll</HintPath>
     </Reference>
+    <Reference Include="Humanizer, Version=2.11.0.0, Culture=neutral, PublicKeyToken=979442b78dfc278e, processorArchitecture=MSIL">
+      <HintPath>..\packages\Humanizer.Core.2.11.10\lib\netstandard2.0\Humanizer.dll</HintPath>
+    </Reference>
     <Reference Include="ICSharpCode.TextEditor, Version=3.2.1.6466, Culture=neutral, PublicKeyToken=4d61825e8dd49f1a, processorArchitecture=MSIL">
       <HintPath>..\packages\ICSharpCode.TextEditor.3.2.1.6466\lib\Net20\ICSharpCode.TextEditor.dll</HintPath>
     </Reference>
@@ -112,6 +115,12 @@
     </Compile>
     <Compile Include="AgentJobs\JobStep.Designer.cs">
       <DependentUpon>JobStep.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Changes\AzureDBResourceGovernance.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Changes\AzureDBResourceGovernance.Designer.cs">
+      <DependentUpon>AzureDBResourceGovernance.cs</DependentUpon>
     </Compile>
     <Compile Include="Changes\ResourceGovernor.cs">
       <SubType>UserControl</SubType>
@@ -567,6 +576,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Changes\Alerts.resx">
       <DependentUpon>Alerts.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Changes\AzureDBResourceGovernance.resx">
+      <DependentUpon>AzureDBResourceGovernance.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Changes\AzureServiceObjectivesHistory.resx">
       <DependentUpon>AzureServiceObjectivesHistory.cs</DependentUpon>
