--- a/DBADashGUI/packages.config
+++ b/DBADashGUI/packages.config
@@ -3,6 +3,7 @@
   <package id="CommandLineParser" version="2.8.0" targetFramework="net472" />
   <package id="DiffPlex" version="1.7.0" targetFramework="net472" />
   <package id="DiffPlex.Wpf" version="1.3.1" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml" version="2.11.3" targetFramework="net472" />
   <package id="Humanizer" version="2.11.10" targetFramework="net472" />
   <package id="Humanizer.Core" version="2.11.10" targetFramework="net472" />
   <package id="Humanizer.Core.af" version="2.11.10" targetFramework="net472" />
@@ -56,4 +57,8 @@
   <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
   <package id="LiveCharts.WinForms" version="0.9.7.1" targetFramework="net472" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
+  <package id="SpreadsheetLight" version="3.5.0" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="5.0.0" targetFramework="net472" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Packaging" version="4.7.0" targetFramework="net472" />
 </packages>
