nuget package update

--- a/DBADash/packages.config
+++ b/DBADash/packages.config
@@ -1,25 +1,43 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AWSSDK.Core" version="3.7.0.17" targetFramework="net471" />
-  <package id="AWSSDK.S3" version="3.7.0.18" targetFramework="net471" />
-  <package id="Microsoft.Data.SqlClient" version="2.1.2" targetFramework="net471" />
-  <package id="Microsoft.Data.SqlClient.SNI" version="2.1.1" targetFramework="net471" />
-  <package id="Microsoft.Identity.Client" version="4.30.1" targetFramework="net471" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.11.0" targetFramework="net471" />
-  <package id="Microsoft.IdentityModel.Logging" version="6.11.0" targetFramework="net471" />
-  <package id="Microsoft.IdentityModel.Protocols" version="6.11.0" targetFramework="net471" />
-  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.11.0" targetFramework="net471" />
-  <package id="Microsoft.IdentityModel.Tokens" version="6.11.0" targetFramework="net471" />
+  <package id="AWSSDK.Core" version="3.7.0.37" targetFramework="net471" />
+  <package id="AWSSDK.S3" version="3.7.1.7" targetFramework="net471" />
+  <package id="Azure.Core" version="1.15.0" targetFramework="net471" />
+  <package id="Azure.Identity" version="1.4.0" targetFramework="net471" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net471" />
+  <package id="Microsoft.Data.SqlClient" version="3.0.0" targetFramework="net471" />
+  <package id="Microsoft.Data.SqlClient.SNI" version="3.0.0" targetFramework="net471" />
+  <package id="Microsoft.Identity.Client" version="4.33.0" targetFramework="net471" />
+  <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.18.6" targetFramework="net471" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.11.1" targetFramework="net471" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.11.1" targetFramework="net471" />
+  <package id="Microsoft.IdentityModel.Protocols" version="6.11.1" targetFramework="net471" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.11.1" targetFramework="net471" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.11.1" targetFramework="net471" />
   <package id="Microsoft.SqlServer.Assessment" version="1.0.305" targetFramework="net471" />
   <package id="Microsoft.SqlServer.Assessment.Authoring" version="1.0.282" targetFramework="net471" />
-  <package id="Microsoft.SqlServer.DacFx.x64" version="150.5084.2" targetFramework="net471" />
+  <package id="Microsoft.SqlServer.DacFx.x64" version="150.5164.1" targetFramework="net471" />
   <package id="Microsoft.SqlServer.Management.SqlParser" version="160.21099.39" targetFramework="net471" />
   <package id="Microsoft.SqlServer.SqlManagementObjects" version="161.46367.54" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net471" />
   <package id="Polly" version="7.2.2" targetFramework="net471" />
   <package id="Serilog" version="2.10.0" targetFramework="net471" />
   <package id="SerilogTimings" version="2.3.0" targetFramework="net471" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net471" />
+  <package id="System.Configuration.ConfigurationManager" version="5.0.0" targetFramework="net471" />
   <package id="System.Data.Common" version="4.3.0" targetFramework="net461" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="6.11.0" targetFramework="net471" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.1" targetFramework="net471" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.11.1" targetFramework="net471" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net471" />
+  <package id="System.Memory.Data" version="1.0.2" targetFramework="net471" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net471" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net471" />
+  <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net471" />
+  <package id="System.Security.Cryptography.ProtectedData" version="5.0.0" targetFramework="net471" />
+  <package id="System.Security.Permissions" version="5.0.0" targetFramework="net471" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net471" />
+  <package id="System.Text.Encodings.Web" version="5.0.1" targetFramework="net471" />
+  <package id="System.Text.Json" version="5.0.2" targetFramework="net471" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net471" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net471" />
 </packages>
