--- a/DBADashGUI/packages.config
+++ b/DBADashGUI/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AvalonEdit" version="6.1.2.30" targetFramework="net472" />
   <package id="CommandLineParser" version="2.8.0" targetFramework="net472" />
   <package id="DiffPlex" version="1.7.0" targetFramework="net472" />
   <package id="DiffPlex.Wpf" version="1.3.1" targetFramework="net472" />
@@ -53,7 +54,6 @@
   <package id="Humanizer.Core.zh-CN" version="2.11.10" targetFramework="net472" />
   <package id="Humanizer.Core.zh-Hans" version="2.11.10" targetFramework="net472" />
   <package id="Humanizer.Core.zh-Hant" version="2.11.10" targetFramework="net472" />
-  <package id="ICSharpCode.TextEditor" version="3.2.1.6466" targetFramework="net472" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
   <package id="LiveCharts.WinForms" version="0.9.7.1" targetFramework="net472" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
